--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6355,7 +6355,7 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 -------------------------------------------------------------------
 6.00.29:
 
--BUG FIX: Miscellaneous fixes
+-BUG FIX: TBD
 
 -Miscellaneous user experience improvements
 
