--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6357,6 +6357,12 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Fixed heading title resizing (when using the font resizing feature in the sidebar), so they now resize with the other text
 
+-BUG FIX: Miscellaneous fixes
+
+-Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): Plugins
+
+-Consolidated error / debug logs into one log file, for clarified debugging output (whe debugging is enabled)
+
 -Miscellaneous user experience improvements
 
 -Code optimization / cleanup
