--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6355,11 +6355,19 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 -------------------------------------------------------------------
 6.00.29:
 
+-BUG FIX: Fixed heading title resizing (when using the font resizing feature in the sidebar), so they now resize with the other text
+
 -BUG FIX: Miscellaneous fixes
+
+-Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): Plugins
+
+-Consolidated error / debug logs into one log file, for clarified debugging output (whe debugging is enabled)
 
 -Miscellaneous user experience improvements
 
 -Code optimization / cleanup
+
+-Updated documentation
 
 IMPORTANT *UPGRADE* NOTICE:
 
