--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -171,13 +171,10 @@ https://zksync.io/api/v0.1.html (KEEP AN EYE OUT FOR V2 DOCS AS WELL)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-Add the same logic we use for the Debt Interest Tracker user interface, for adding / removing addresses in the Address Balance Tracker admin interface.
-
-
 CACHE an md5 hash of all telegram settings combined, and only delete the chatroom data / refresh it if this md5 hash changes (like we do for light chart config). Otherwise you get a bad UX from endlessly getting alerts to re-enter "/start" in the chatroom EVERYTIME YOU UPDATE *ANY* ADMIN SETTINGS.
 
 
-RE-TEST ALL admin config interface settings, as we completely overhauled it to support subarrays and plugins. ALSO DO A CODE REVIEW OF admin_config_interface() AND IT'S CHILD FUNCTIONS.
+RE-TEST ALL admin config interface settings, as we completely overhauled it to support subarrays and plugins. TEST IN FIREFOX TOO. ALSO DO A CODE REVIEW OF THE ENTIRE ADMIN CLASS FUNCTIONS.
 
 
 Test refactored logging system WITH DEBUGGING OFF.
